--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,7 @@ twilio==6.46.0
 uWSGI==2.0.19.1
 croniter==1.0.1
 pretty-cron==1.2.0
+factory-boy==3.0.1
+mock==4.0.2
+coverage==5.0.3
+freezegun==1.1.0
