--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   web:
     build:
       context: .
-    image: yourusername/oel-server-web:latest
+    image: dplouffe/oel-server-web:latest
     container_name: oel-server-web
     command: ["web"]
     env_file: .env
@@ -19,7 +19,7 @@ services:
   celery:
     build:
       context: .
-    image: yourusername/oel-server-celery:latest
+    image: dplouffe/oel-server-celery:latest
     container_name: oel-server-celery
     command: ["celery"]
     env_file: .env
@@ -33,7 +33,7 @@ services:
   celery-beat:
     build:
       context: .
-    image: yourusername/oel-server-beat:latest
+    image: dplouffe/oel-server-beat:latest
     container_name: oel-server-beat
     command: ["beat"]
     env_file: .env
